# Microsoft-Exploration---Modern-Information-Technology

./: 1-MicrosoftGraphEngine_Start.cpp  README.md
Machine Learning - ELL/libraries/: CMakeLists.txt
Machine Learning - ELL/libraries/data/include/: IndexValue.h  StlIndexValueIterator.h  TransformingIndexValueIterator.h
Machine Learning - ELL/libraries/functions/: CMakeLists.txt
Machine Learning - ELL/libraries/functions/include/: L2Regularizer.h  LogLoss.h
Machine Learning - ELL/libraries/functions/src/: L2Regularizer.cpp  LogLoss.cpp
Machine Learning - ELL/libraries/functions/test/src/: main.cpp
Machine Learning - ELL/libraries/math/: CMakeLists.txt
Machine Learning - ELL/libraries/math/include/: BlasWrapper.h  Common.h  MathConstants.h  Matrix.h  MatrixOperations.h  Tensor.h  TensorOperations.h  Transformations.h  Vector.h  VectorOperations.h
Machine Learning - ELL/libraries/math/src/: BlasWrapper.cpp  Tensor.cpp
Machine Learning - ELL/libraries/math/test/include/: Matrix_test.h  Tensor_test.h  Vector_test.h
Machine Learning - ELL/libraries/math/test/src/: main.cpp
Machine Learning - ELL/libraries/testing/: CMakeLists.txt
Machine Learning - ELL/libraries/testing/include/: testing.h
Machine Learning - ELL/libraries/testing/src/: testing.cpp
Machine Learning - ELL/libraries/utilities/: CMakeLists.txt
Machine Learning - ELL/libraries/utilities/include/: AbstractInvoker.h  ArchiveVersion.h  Archiver.h  Boolean.h  CStringParser.h  CommandLineParser.h  CompressedIntegerList.h  Debug.h  Exception.h  Files.h  Format.h  Hash.h  IArchivable.h  Logger.h  OutputStreamImpostor.h  ParallelTransformIterator.h  StlContainerIterator.h  StlStridedIterator.h  StringUtil.h  TransformIterator.h  TypeFactory.h  TypeName.h  TypeTraits.h  Unused.h
Machine Learning - ELL/libraries/utilities/src/: ArchiveVersion.cpp  Archiver.cpp  Boolean.cpp  CStringParser.cpp  CommandLineParser.cpp  CompressedIntegerList.cpp  Files.cpp  Format.cpp  Logger.cpp  OutputStreamImpostor.cpp  StringUtil.cpp  TypeName.cpp
Machine Learning - ELL/libraries/utilities/test/include/: Files_test.h  Hash_test.h  Iterator_test.h
Machine Learning - ELL/libraries/utilities/test/src/: Files_test.cpp  Hash_test.cpp  Iterator_test.cpp  main.cpp
